<resources>
    <string name="app_name">Book Store</string>

    <!-- Label for overflow menu option that inserts fake book data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all book data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Books</string>

    <!-- Title text for the empty view, which describes the empty view image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">Get started by adding a book</string>

    <!-- Subtitle text for the empty view that prompts the user to add a book [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Required sections: \n\n Book Name \n Price \n
        Quantity in Stock \n Supplier Name \n Supplier Phone Number</string>

    <!-- Title for the activity to add a new book [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_book">Add a Book</string>

    <!-- Title for the activity to edit a book [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_book">Edit Book</string>

    <!-- Label for editor menu option to save book and leaves the editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current book [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Label for detailed view overflow menu option that opens the editor [CHAR LIMIT=20] -->
    <string name="action_edit">Edit</string>

    <!-- Label for book name category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_book">Book</string>

    <!-- Label for genre information in the editor [CHAR LIMIT=30] -->
    <string name="category_genre">Genre</string>

    <!-- Label for price information in the editor [CHAR LIMIT=30] -->
    <string name="category_price">Price</string>

    <!-- Label for quantity information in the editor [CHAR LIMIT=30] -->
    <string name="category_quantity">Quantity</string>

    <!-- Label for supplier information in the editor [CHAR LIMIT=30] -->
    <string name="category_supplier">Supplier Information</string>

    <!-- Label for dropdown menu option if the book's genre is Unknown [CHAR LIMIT=20] -->
    <string name="genre_unknown">Unknown</string>

    <!-- Label for dropdown menu option if the book genre is Science Fiction [CHAR LIMIT=20] -->
    <string name="genre_sci_fi">Science Fiction</string>

    <!-- Label for dropdown menu option if the book genre is Fantasy [CHAR LIMIT=20] -->
    <string name="genre_fantasy">Fantasy</string>

    <!-- Label for dropdown menu option if the book genre is Drama [CHAR LIMIT=20] -->
    <string name="genre_drama">Drama</string>

    <!-- Label for dropdown menu option if the book genre is Action and Adventure [CHAR LIMIT=20] -->
    <string name="genre_action_and_adventure">Action and Adventure</string>

    <!-- Label for dropdown menu option if the book genre is Romance [CHAR LIMIT=20] -->
    <string name="genre_romance">Romance</string>

    <!-- Label for dropdown menu option if the book genre is Horror [CHAR LIMIT=20] -->
    <string name="genre_horror">Horror</string>

    <!-- Label for dropdown menu option if the book genre is Mystery [CHAR LIMIT=20] -->
    <string name="genre_mystery">Mystery</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_book_name">Name</string>

    <!-- Text hint for genre field in the editor [CHAR LIMIT=30] -->
    <string name="hint_book_genre">Genre</string>

    <!-- Text hint for price field in the editor [CHAR LIMIT=30] -->
    <string name="hint_book_price">Price</string>

    <!-- Text hint for quantity field in the editor [CHAR LIMIT=30] -->
    <string name="hint_book_quantity">Quantity</string>

    <!-- Text hint for supplier name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_book_supplier_name">Supplier Name</string>

    <!-- Text hint for supplier phone field in the editor [CHAR LIMIT=30] -->
    <string name="hint_book_supplier_phone">Phone Number</string>

    <!-- Toast message in editor when new book has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_book_successful">Book saved</string>

    <!-- Toast message in editor when new book has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_book_failed">Error with saving book</string>

    <!-- Toast message in editor when new book has been successfully updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_book_successful">Book updated</string>

    <!-- Toast message in editor when new book has failed to be updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_book_failed">Error with updating book</string>

    <!-- Toast message in editor when current book was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_book_successful">Book deleted</string>

    <!-- Toast message in editor when current book has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_book_failed">Error with deleting book</string>

    <!-- Toast message in provider when current book requires a name [CHAR LIMIT=NONE] -->
    <string name="provider_requires_name">Book requires a name</string>

    <!-- Toast message in provider when current book requires a genre [CHAR LIMIT=NONE] -->
    <string name="provider_requires_genre">Book requires a genre</string>

    <!-- Toast message in provider when current book requires a valid price [CHAR LIMIT=NONE] -->
    <string name="provider_requires_price">Book requires a valid price</string>

    <!-- Toast message in provider when current book requires a valid quantity [CHAR LIMIT=NONE] -->
    <string name="provider_requires_quantity">Book requires a valid quantity</string>

    <!-- Toast message in provider when current book requires a supplier name [CHAR LIMIT=NONE] -->
    <string name="provider_requires_supplier_name">Book requires a supplier name</string>

    <!-- Toast message in provider when current book requires a supplier phone number [CHAR LIMIT=NONE] -->
    <string name="provider_requires_supplier_phone">Book requires a supplier phone number</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current book [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Dialog message to ask the user to confirm deleting the current book [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this book? This cannot be undone.</string>

    <!-- Dialog button text for the option to confirm deleting the current book [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current book [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Text for the quantity in stock [CHAR LIMIT=20] -->
    <string name="in_stock">in Stock</string>

    <!-- Text for the sale button [CHAR LIMIT=20] -->
    <string name="sale_button">Sale</string>

    <!-- Text for the Toast Message no stock left [CHAR LIMIT=30] -->
    <string name="no_stock">No Stock Left - Contact Supplier </string>

    <!-- Text for the Content Descriptions [CHAR LIMIT=NONE] -->
    <string name="bookshelf">Three books on a shelf</string>
    <string name="plus">A plus sign</string>
    <string name="minus">A minus sign</string>

</resources>
