<?xml version="1.0" encoding="utf-8"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:tools="http://schemas.android.com/tools"    android:layout_width="match_parent"    android:layout_height="match_parent"    android:orientation="vertical"    android:padding="@dimen/padding_all_medium_16dp"    tools:context=".EditorActivity">    <!-- Book name category -->    <LinearLayout        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:orientation="horizontal">        <!-- Label -->        <TextView            android:text="@string/category_book"            style="@style/CategoryStyle" />        <!-- Input fields -->        <LinearLayout            android:layout_height="wrap_content"            android:layout_width="@dimen/width_editor_0dp"            android:layout_weight="2"            android:paddingLeft="@dimen/padding_editor_micro_4dp"            android:orientation="vertical">            <!-- Book Name field -->            <EditText                android:id="@+id/edit_book_name"                style="@style/EditorFieldStyle"                android:hint="@string/hint_book_name"                android:inputType="textCapWords" />        </LinearLayout>    </LinearLayout>    <!-- Genre category -->    <LinearLayout        android:id="@+id/container_genre"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_marginTop="@dimen/margin_top_large_50dp"        android:orientation="horizontal">        <!-- Label -->        <TextView            style="@style/CategoryStyle"            android:text="@string/category_genre" />        <!-- Input field -->        <LinearLayout            android:layout_width="@dimen/width_editor_0dp"            android:layout_height="wrap_content"            android:layout_weight="2"            android:orientation="vertical">            <!-- Genre drop-down spinner -->            <Spinner                android:id="@+id/spinner_genre"                android:paddingRight="@dimen/padding_all_medium_16dp"                android:layout_width="wrap_content"                android:layout_height="@dimen/height_editor_spinner_48dp"                android:spinnerMode="dropdown"                android:theme="@style/mySpinnerItemStyle" />        </LinearLayout>    </LinearLayout>    <!-- Book price category -->    <LinearLayout        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_marginTop="@dimen/margin_top_large_50dp"        android:orientation="horizontal">        <!-- Label -->        <TextView            style="@style/CategoryStyle"            android:text="@string/category_price" />        <!-- Input fields -->        <LinearLayout            android:layout_width="@dimen/width_editor_0dp"            android:layout_height="wrap_content"            android:layout_weight="2"            android:orientation="vertical"            android:paddingLeft="@dimen/padding_editor_micro_4dp">            <!-- Price field -->            <EditText                android:id="@+id/edit_book_price"                style="@style/EditorFieldStyle"                android:hint="@string/hint_book_price"                android:inputType="numberDecimal" />        </LinearLayout>    </LinearLayout>    <!-- Book quantity category -->    <LinearLayout        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_marginTop="@dimen/margin_top_large_50dp"        android:orientation="horizontal">        <!-- Label -->        <TextView            style="@style/CategoryStyle"            android:text="@string/category_quantity" />        <!-- Input fields -->        <LinearLayout            android:layout_width="@dimen/width_editor_0dp"            android:layout_height="wrap_content"            android:layout_weight="2"            android:orientation="vertical"            android:paddingLeft="@dimen/padding_editor_micro_4dp">            <!-- Quantity field -->            <EditText                android:id="@+id/edit_book_quantity"                style="@style/EditorFieldStyle"                android:hint="@string/hint_book_quantity"                android:inputType="number" />        </LinearLayout>    </LinearLayout>    <!-- Supplier category -->    <LinearLayout        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_marginTop="@dimen/margin_top_large_50dp"        android:orientation="horizontal">        <!-- Label -->        <TextView            android:text="@string/category_supplier"            style="@style/CategoryStyle" />        <!-- Input fields -->        <LinearLayout            android:layout_height="wrap_content"            android:layout_width="@dimen/width_editor_0dp"            android:layout_weight="2"            android:paddingLeft="@dimen/padding_editor_micro_4dp"            android:orientation="vertical">            <!-- Supplier Name field -->            <EditText                android:id="@+id/edit_supplier_name"                style="@style/EditorFieldStyle"                android:hint="@string/hint_book_supplier_name"                android:inputType="textCapWords" />            <!-- Supplier Phone Number field -->            <EditText                android:id="@+id/edit_book_supplier_phone"                style="@style/EditorFieldStyle"                android:hint="@string/hint_book_supplier_phone"                android:digits="0123456789+"                android:inputType="phone" />        </LinearLayout>    </LinearLayout></LinearLayout>