<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_all_medium_16dp"
    tools:context=".DetailedViewActivity">

    <!-- Genre category -->
    <LinearLayout
        android:id="@+id/detailed_view_container_genre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_genre"
            tools:text="@string/hint_book_genre" />

        <!-- Input field -->
        <LinearLayout
            android:layout_width="@dimen/width_editor_0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <!-- Spinner Genre -->
            <TextView
                android:id="@+id/detailed_view_spinner_genre"
                style="@style/DetailedViewFieldStyle"
                android:paddingRight="@dimen/padding_all_medium_16dp"
                tools:text="@string/hint_book_genre" />
        </LinearLayout>
    </LinearLayout>

    <!-- Book price category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_large_50dp"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_price" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="@dimen/width_editor_0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="@dimen/padding_editor_micro_4dp">

            <!-- Price field -->
            <TextView
                android:id="@+id/detailed_view_book_price"
                style="@style/DetailedViewFieldStyle"
                tools:text="£5.99" />
        </LinearLayout>
    </LinearLayout>

    <!-- Book quantity category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_large_50dp"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_quantity" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="@dimen/width_editor_0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/padding_editor_micro_4dp">

            <!-- Quantity field -->
            <TextView
                android:id="@+id/detailed_view_book_quantity"
                style="@style/DetailedViewFieldStyle"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:paddingLeft="@dimen/margin_all_16dp"
                tools:text="0" />

            <!-- Icons found at www.iconfinder.com made by Yannick Lung from the Freecns Cumulus
        icon set -->
            <ImageButton
                android:id="@+id/detailed_view_increase_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_all_16dp"
                android:layout_weight="4"
                android:contentDescription="@string/plus"
                android:src="@drawable/circledplus" />

            <ImageButton
                android:id="@+id/detailed_view_decrease_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:contentDescription="@string/minus"
                android:src="@drawable/circledminus" />
        </LinearLayout>
    </LinearLayout>

    <!-- Supplier category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_large_50dp"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_supplier" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="@dimen/width_editor_0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="@dimen/padding_editor_micro_4dp">

            <!-- Supplier Name field -->
            <TextView
                android:id="@+id/detailed_view_supplier_name"
                style="@style/DetailedViewFieldStyle"
                tools:text="@string/hint_book_supplier_name" />

            <!-- Supplier Phone Number field
             Icons found at www.iconfinder.com made by Daniel Bruce from the Entypo
        icon set -->
            <TextView
                android:id="@+id/detailed_view_supplier_phone"
                style="@style/DetailedViewFieldStyle"
                android:drawableRight="@drawable/phone"
                tools:text="0800800800" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>