<?xml version="1.0" encoding="utf-8"?><!-- Layout for a single list item in the list of books -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_all_medium_16dp">


    <TextView
        android:id="@+id/name"
        style="@style/ListViewNameStyle"
        android:layout_alignBaseline="@id/quantity_layout"
        tools:text="@string/hint_book_name" />

    <TextView
        android:id="@+id/price"
        style="@style/ListViewPriceStyle"
        android:layout_alignBaseline="@id/sale_button"
        android:layout_below="@id/name"
        tools:text="£5.99" />

    <LinearLayout
        android:id="@+id/quantity_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true">

        <TextView
            android:id="@+id/quantity_in_stock"
            style="@style/ListViewQuantityStyle"
            android:layout_marginRight="@dimen/margin_list_quantity_5dp"
            tools:text="15" />

        <TextView
            android:id="@+id/stock"
            style="@style/ListViewQuantityStyle"
            android:layout_marginRight="@dimen/margin_all_16dp"
            android:text="@string/in_stock" />
    </LinearLayout>

    <Button
        android:id="@+id/sale_button"
        style="@style/ListViewSaleButtonStyle"
        android:layout_below="@id/quantity_layout"
        android:focusable="false"
        android:text="@string/sale_button" />
</RelativeLayout>