<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CatalogActivity">

    <!-- ListView showing a list of all inventory items in the database -->
    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <!-- Empty view for the list -->
    <RelativeLayout
        android:id="@+id/empty_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <!-- Icon designed by freepik from Flaticon
        https://www.flaticon.com/free-icon/bookshelf_183730#term=bookshelf&page=1&position=13-->
        <ImageView
            android:id="@+id/empty_bookshelf_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/bookshelf"
            android:src="@drawable/bookshelf" />

        <TextView
            android:id="@+id/empty_title_text"
            style="@style/CatalogEmptyViewTitleTextStyle"
            android:layout_below="@+id/empty_bookshelf_image"
            android:text="@string/empty_view_title_text" />

        <TextView
            android:id="@+id/empty_subtitle_text"
            style="@style/CatalogEmptyViewInfoTextStyle"
            android:layout_below="@id/empty_title_text"
            android:text="@string/empty_view_subtitle_text" />
    </RelativeLayout>

    <!-- Floating Action Button -->
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/margin_all_16dp"
        android:src="@drawable/baseline_add_circle_24"/>

</RelativeLayout>